# pyforum-webapp

./: .argocd-allow-symlinks  .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-push-docker.yaml  deploy-to-kubernetes.yaml  django-tests.yaml
authentication/: models.py
authentication/migrations/: 0001_initial.py
forum/: pyvenv.cfg
forum-sandbox/: settings.py
forum_sandbox/: asgi.py  settings.py  wsgi.py
k8s/: django-deployment.yaml  ingress.yaml  postgresql-deployment.yaml  pvc.yaml  secrets.yaml
k8s/base/: kustomization.yml
k8s/base/configmaps/: app-config.yml  nginx-config.yml
k8s/base/deployments/: postgres-deployment.yml  web-deployment.yml
k8s/base/services/: web-service.yml
k8s/base/volumes/: postgres-pv.yml  postgres-pvc.yml
k8s/production/: kustomization.yml
k8s/production/configs/: app-config-patch.yml
k8s/production/hpa/: web-hpa.yml
k8s/production/ingress/: ingress.yml
k8s/staging/: kustomization.yml
k8s/staging/configs/: app-config-patch.yml
k8s/staging/ingress/: ingress.yml
nginx/: nginx.conf
path/to/venv./: pyvenv.cfg
profiles/migrations/: 0001_initial.py
terraform/: ecr.tf  eks.tf  loadbalancer.tf  main.tf  outputs.tf  providers.tf  rds.tf  security.tf  variables.tf  vpc.tf
