[tool.poetry]
name = "poetry add django psycopg2-binary gunicorn"
version = "0.1.0"
description = "Web-forum on Django for DevOps-project"
authors = ["Alex Dobroskok <dobroskok.al3x@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
